--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="dim_white">#E5E5E5</color>
     <color name="gray">#C4C4C4</color>
     <color name="transparentBlack">#48000000</color>
+    <color name="red">#D80404</color>
 </resources>
