--- a/app/src/main/res/layout/female_wear_list_item.xml
+++ b/app/src/main/res/layout/female_wear_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -33,7 +33,7 @@
             android:textColor="@color/colorPrimaryDark"
             android:fontFamily="@font/roboto"
             android:textStyle="bold"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"/>
