--- a/app/src/main/res/layout/fragment_detail_cloth.xml
+++ b/app/src/main/res/layout/fragment_detail_cloth.xml
@@ -195,7 +195,8 @@
             app:cardBackgroundColor="@color/colorPrimary"
             android:layout_marginTop="12dp"
             android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp">
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="12dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
