design add item layout

--- a/app/src/main/res/navigation/nav_gragh.xml
+++ b/app/src/main/res/navigation/nav_gragh.xml
@@ -41,4 +41,10 @@
         android:label=""
         tools:layout="@layout/register_fragment"/>
 
+    <fragment
+        android:id="@+id/navigation_addFemaleCloth"
+        android:name="com.mjslick.ui.auth.register.RegisterFragment"
+        android:label=""
+        tools:layout="@layout/register_fragment"/>
+
 </navigation>
