--- a/app/src/main/res/layout/fragment_add_female_cloths.xml
+++ b/app/src/main/res/layout/fragment_add_female_cloths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +8,20 @@
     tools:context=".ui.female.AddFemaleClothsFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/logo"
         android:layout_width="50dp"
         android:layout_height="50sp"
         android:layout_gravity="end"
+        android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/logo"/>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo">
 
 
     <LinearLayout
@@ -156,14 +160,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <GridLayout
-        android:id="@+id/femaleClothImages"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="12dp"/>
+   <com.teleclinic.bulent.smartimageview.SmartImageViewLayout
+       android:layout_width="match_parent"
+       android:layout_height="100dp"
+       android:layout_marginTop="12dp"
+       android:layout_marginStart="32dp"
+       android:layout_marginEnd="32dp"
+       android:layout_marginBottom="8dp"
+       android:layout_gravity="center"
+       app:shape="SQUARE"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/saveFemaleCloths"
@@ -192,8 +197,10 @@
         android:layout_marginBottom="32dp"
         android:src="@drawable/ic_gallery"
         android:layout_gravity="end"
+        android:layout_centerInParent="true"
+        android:layout_alignParentEnd="true"
         app:backgroundTint="@color/colorPrimaryDark"
         app:elevation="8dp"
         app:tint="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
