--- a/app/src/main/res/layout/fragment_add_male_cloth.xml
+++ b/app/src/main/res/layout/fragment_add_male_cloth.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +8,19 @@
     tools:context=".ui.female.AddFemaleClothsFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/logo"
         android:layout_width="50dp"
         android:layout_height="50sp"
         android:layout_gravity="end"
+        android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/logo"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo">
 
 
         <LinearLayout
@@ -156,14 +159,55 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <GridLayout
-                android:id="@+id/maleClothImages"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"/>
+                android:gravity="center"
+                android:layout_marginEnd="32dp">
+
+                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
+                    android:id="@+id/maleShirtImage1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:siShape="@drawable/shirt_image_shape"
+                    app:siSquare="true"
+                    android:scaleType="centerCrop"/>
+
+                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
+                    android:id="@+id/maleShirtImage2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:siShape="@drawable/shirt_image_shape"
+                    app:siSquare="true"
+                    android:layout_toEndOf="@id/maleShirtImage1"
+                    android:layout_marginStart="16dp"
+                    android:scaleType="centerCrop"/>
+
+                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
+                    android:id="@+id/maleShirtImage3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:siShape="@drawable/shirt_image_shape"
+                    app:siSquare="true"
+                    android:layout_below="@id/maleShirtImage2"
+                    android:layout_marginTop="16dp"
+                    android:scaleType="centerCrop"/>
+
+                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
+                    android:id="@+id/maleShirtImage4"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:siShape="@drawable/shirt_image_shape"
+                    app:siSquare="true"
+                    android:layout_toEndOf="@id/maleShirtImage3"
+                    android:layout_below="@id/maleShirtImage2"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:scaleType="centerCrop"/>
+
+            </RelativeLayout>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/saveMaleCloths"
@@ -185,15 +229,17 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/selectMalePicture"
+        android:id="@+id/maleSelectPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:src="@drawable/ic_gallery"
         android:layout_gravity="end"
+        android:layout_centerInParent="true"
+        android:layout_alignParentEnd="true"
         app:backgroundTint="@color/colorPrimaryDark"
         app:elevation="8dp"
         app:tint="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
