--- a/app/src/main/res/layout/log_in_fragment.xml
+++ b/app/src/main/res/layout/log_in_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/logInLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -138,5 +139,15 @@
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/logInSpinKit"
+        style="@style/SpinKitView.FadingCircle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="16dp"
+        app:SpinKit_Color="@color/colorPrimary"/>
 
 </RelativeLayout>
