--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:textColor="@color/colorAccent"
-        android:text="CONFIRM"
+        android:text="COMFIRM"
         android:textStyle="bold"
         android:fontFamily="@font/roboto"
         android:layout_alignParentEnd="true"
