--- a/app/src/main/res/layout/female_wear_list_item.xml
+++ b/app/src/main/res/layout/female_wear_list_item.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     app:cardElevation="8dp"
     app:cardCornerRadius="15dp"
-    android:layout_marginStart="12dp"
+    android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginTop="12dp">
 
@@ -29,14 +29,15 @@
             android:id="@+id/female_wear_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Female Native wear"
-            android:textColor="@color/colorPrimaryDark"
-            android:fontFamily="@font/roboto"
-            android:textStyle="bold"
-            android:gravity="center_horizontal"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:paddingStart="8dp"
-            android:paddingEnd="8dp"/>
+            android:paddingEnd="8dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            tools:text="Female Native wear" />
 
         <RatingBar
             android:id="@+id/female_wear_rating"
