implementing details fragment

--- a/app/src/main/res/layout/fragment_detail_cloth.xml
+++ b/app/src/main/res/layout/fragment_detail_cloth.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/female_wear_detailTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Female Native Wear"
+                    android:text="@string/female_native_wear"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/colorPrimaryDark"
                     android:layout_marginTop="8dp"
@@ -52,6 +52,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/femaleWearDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="This is the best fashion design so far, amazing and cool design you will love"
@@ -177,7 +178,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price is Negotiable"
+                    android:text="@string/price_is_negotiable"
                     android:textStyle="bold"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
@@ -253,6 +254,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_icons8_twitter"
+                        android:contentDescription="@string/twitter_logo"
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="12dp"
                         android:paddingBottom="16dp"
@@ -263,6 +265,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_facebook"
+                        android:contentDescription="@string/facebook_logo"
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="12dp"
                         android:paddingBottom="16dp"
@@ -273,6 +276,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_linkedin"
+                        android:contentDescription="@string/linkedin_logo"
                         android:layout_marginTop="12dp"
                         android:paddingBottom="16dp"
                         android:layout_gravity="center"/>
