--- a/app/src/main/res/layout/fragment_detail_cloth.xml
+++ b/app/src/main/res/layout/fragment_detail_cloth.xml
@@ -41,7 +41,7 @@
                 android:gravity="center_horizontal">
 
                 <TextView
-                    android:id="@+id/female_wear_detailTitle"
+                    android:id="@+id/wear_detailTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/female_native_wear"
