adding zoom for image

--- a/app/src/main/res/navigation/nav_gragh.xml
+++ b/app/src/main/res/navigation/nav_gragh.xml
@@ -59,4 +59,11 @@
         android:label=""
         tools:layout="@layout/fragment_detail_cloth"/>
 
+    <fragment
+        android:id="@+id/navigation_zoom"
+        android:name="com.mjslick.ui.detail.ZoomImageFragment"
+        android:label=""
+        tools:layout="@layout/fragment_zoom_image"/>
+
+
 </navigation>
