--- a/app/src/main/res/layout/fragment_detail_cloth.xml
+++ b/app/src/main/res/layout/fragment_detail_cloth.xml
@@ -44,6 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/female_native_wear"
+                    android:textAllCaps="true"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/colorPrimaryDark"
                     android:layout_marginTop="8dp"
@@ -95,7 +96,7 @@
                     android:id="@+id/female_wear_detailPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price"
+                    android:text="@string/price"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/colorPrimaryDark"
                     android:layout_marginTop="8dp"
@@ -207,7 +208,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="CONTACTS"
+                    android:text="@string/contact_me"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/colorPrimaryDark"
                     android:layout_marginTop="8dp"
