--- a/app/src/main/res/layout/fragment_detail_cloth.xml
+++ b/app/src/main/res/layout/fragment_detail_cloth.xml
@@ -111,6 +111,7 @@
                     android:layout_marginTop="8dp">
 
                     <TextView
+                        android:id="@+id/top_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
@@ -135,6 +136,7 @@
                     android:layout_marginTop="8dp">
 
                     <TextView
+                        android:id="@+id/trouser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
@@ -159,6 +161,7 @@
                     android:layout_marginTop="8dp">
 
                     <TextView
+                        android:id="@+id/complete"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
